--- a/src/header.html
+++ b/src/header.html
@@ -1,15 +1,18 @@
 <!DOCTYPE html>
 <html>
 <title>W3.CSS Template</title>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1">
-<link rel="stylesheet" href="src/style.css">
-<link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
-<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Raleway">
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-<script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
-<script href="node_modules/jquery/dist/jquery.min.js" type="text/javascript" ></script>
-<script src="node_modules/izimodal/js/iziModal.min.js" type="text/javascript"></script>
-<link rel="stylesheet" href="node_modules/izimodal/css/iziModal.min.css">
-<script src="node_modules/swup/dist/swup.js" type="text/javascript"></script>
-<script src="src/nav.js" type="text/javascript"></script>
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Raleway">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link rel="stylesheet" href="node_modules/izimodal/css/iziModal.min.css">
+    <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
+    <script href="node_modules/jquery/dist/jquery.min.js" type="text/javascript" ></script>
+    <script src="node_modules/izimodal/js/iziModal.min.js" type="text/javascript"></script>
+    <script src="node_modules/swup/dist/swup.js" type="text/javascript"></script>
+    <script src="src/nav.js" type="text/javascript"></script>
+    <link rel="stylesheet" href="src/style.css">
+</head>
+
