--- a/src/header.html
+++ b/src/header.html
@@ -9,12 +9,12 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="node_modules/izimodal/css/iziModal.min.css">
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.4/css/all.css" integrity="sha384-DyZ88mC6Up2uqS4h/KRgHuoeGwBcD4Ng9SiP4dIRy0EXTlnuz47vAwmeGwVChigm" crossorigin="anonymous">
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
     <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
     <script href="node_modules/jquery/dist/jquery.min.js" type="text/javascript" ></script>
     <script src="node_modules/izimodal/js/iziModal.min.js" type="text/javascript"></script>
     <script src="node_modules/swup/dist/swup.js" type="text/javascript"></script>
-    <script src="src/nav.js" type="text/javascript"></script>
     <link rel="stylesheet" href="src/style.css">
 </head>
 
